--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "xuqingkai/php",
+    "name": "xuqingkai/php.library",
     "description": "xuqingkai",
     "type": "library",
     "homepage": "https://github.com/xuqingkai",
